# umiche

./: .gitignore  404.html  CNAME  Dockerfile  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: conda.yml  docker.yml  docs.yml
about/: index.html
changelog/: index.html
conda/: meta.yaml
contact/: index.html
docs/: TMRanalysis.md  about.md  changelog.md  contact.md  index.md  installation.md  reproducibility.md  tmranalysis.md
docs/tutorial/: IO.md  TMRanalysis.md  UMI-extraction.md  YAML-configuration.md  graph.md  tmranalysis.md
installation/: index.html
reproducibility/: index.html
search/: search_index.json
tmranalysis/: index.html
tutorial/IO/: index.html
tutorial/UMI-extraction/: index.html
tutorial/YAML-configuration/: index.html
tutorial/tmranalysis/: index.html
umiche/: __init__.py  dedup.py  graph.py  io.py  mat.py  pipeline.py  plot.py  tag.py  trim.py  vis.py
umiche/align/: BundlePos.py  Read.py  Write.py
umiche/bam/: Build.py  FromRead.py  Gadgetry.py  Generator.py  Reader.py  Relation.py  Tagging.py  Writer.py
umiche/deduplicate/: Basic.py  Build.py  CMI.py  Gadgetry.py  Gene.py  MultiPos.py  OnePos.py  Position.py  SingleCell.py  Spikein.py  Tabulate.py  UMIBasic.py  __init__.py  data.json
umiche/deepconvcvae/: Matrix.py  PlotTresor.py  PlotmclUMI.py
umiche/fastq/: Convert.py  Read.py  UMI.py  Write.py  Writer.py
umiche/graph/: Adjacency.py  CC.py
umiche/network/: Adjacency.py  CC.py  Edge.py
umiche/plot/: Element.py  Heterogeneity.py  MCL.py  PlotNewTransloc.py  ProtDTSplit.py  (+6 more)
(+255 files in other folders)
